# manipulator

./: .gitignore  README.md  README.md~  manipulator.sh
modules/calibration/stereo_calibration/: calib_intrinsic.cpp  calib_stereo.cpp
modules/drivers/binocular_ws/src/mini_binocular/: CMakeLists.txt  package.xml
modules/drivers/binocular_ws/src/mini_binocular/calib_file/: cam_stereo_190319.yml
modules/drivers/binocular_ws/src/mini_binocular/launch/: mini_binocular.launch  save_calibration_image.launch
modules/drivers/binocular_ws/src/mini_binocular/scripts/: grub_image.py  save_calibration_image.py
modules/perception/object/binocular_camera/src/object_detect/: CMakeLists.txt  package.xml
modules/perception/object/binocular_camera/src/object_detect/include/sgm/: disparity_method.h
modules/perception/object/binocular_camera/src/object_detect/launch/: object_detect.launch
modules/perception/object/binocular_camera/src/object_detect/src/: object_detect_node.cpp
modules/perception/object/binocular_camera/src/object_detect/src/sgm/: disparity_method.cu
scripts/: calibrate_binocular_camera.sh  driver_mini_binocular_start.sh  driver_save_calibration_image.sh  perception_object_detect_start.sh
